--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 
 <head>
     <meta charset=utf-8/>
+
+    <!-- style -->
+    <link rel='stylesheet' href='style.css'>
+
+    <!-- add title -->
+    <title>ic-06</title>
+
 </head>
 
 
 <body>
+
+    <h1>JavaScript Part 2</h1>
 
 
 </body>
