--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
 
     <h1>JavaScript Part 2</h1>
 
+    <div>
+
+        <div class='gen'>
+
+            <svg id='frame'>
+
+                <circle id='circle' cx='480' cy='20' r='10'/>
+                <text x='480' y='20'>(480, 20)</text>
+
+                <line id='line' x1='500' y1='495' x2='0' y2='495'>
+
+            </svg>
+
+            <button type='button' id='button1'>
+            Red Line</button>
+
+        </div>
+
+    </div>
+
 
     <!-- link the js -->
     <script src='main.js'></script>
